# IoTEdgeCModuleStepByStep

./: README.md
templates/modules/XxxYyy/: CMakeLists.txt
templates/modules/XxxYyy/inc/: XxxYyy.h
templates/modules/XxxYyy/src/: XxxYyy.c
templates/samples/SssNnn/: CMakeLists.txt
templates/samples/SssNnn/src/: SssNnn.json  SssNnn3.json  main.c
